@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.11506 2012/09/12 22:18:07 wiz Exp $
+$NetBSD: TODO,v 1.11507 2012/09/13 00:32:22 obache Exp $
 
 Suggested new packages
 ======================
@@ -875,7 +875,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o manedit-1.2.1
 	o mantis-1.2.3
 	o matchbox-panel-0.9.3
-	o mathomatic-16.0.3
 	o mawk-1.3.4.20120627
 	o mc-4.8.1.4
 	o mdocml-1.12.1
