@@ -1,11 +1,14 @@
-# $NetBSD: Makefile,v 1.5 2012/07/23 12:47:55 jperkin Exp $
+# $NetBSD: Makefile,v 1.7 2012/09/13 07:19:11 sbd Exp $
 
 GCC_PKGNAME=		gcc47
 .include		"version.mk"
 
 DISTNAME=		gcc-${GCC_DIST_VERSION}
 PKGNAME=		${GCC_PKGNAME}-${GCC_DIST_VERSION}
-PKGREVISION=		3
+## When bumping the PKGREVISION of this package the PKGREVISION of
+## lang/gcc47-libs needs to be bump to be at least 1 more than the
+## PKGREVISION of this package!
+PKGREVISION=		4
 CATEGORIES=		lang
 MASTER_SITES=		${MASTER_SITE_GNU:=gcc/gcc-${GCC_DIST_VERSION}/}
 EXTRACT_SUFX=		.tar.bz2
