@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.30 2011/08/14 14:14:49 obache Exp $
+# $NetBSD: Makefile,v 1.31 2011/11/02 14:44:36 adam Exp $
 
-DISTNAME=	SOAP-Lite-0.714
+DISTNAME=	SOAP-Lite-0.715
 PKGNAME=	p5-${DISTNAME}
 CATEGORIES=	net perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=SOAP/}
